Fixed overlapping div on mobile

--- a/src/components/BetterHireMe/BetterHireMe.less
+++ b/src/components/BetterHireMe/BetterHireMe.less
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 70vh;
+  height: 40vh;
 }
 
 .better-hire-me h1 {
