--- a/src/components/Features/Features.less
+++ b/src/components/Features/Features.less
@@ -1,9 +1,6 @@
 .features-container {
   position: relative;
   z-index: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   min-height: 100vh;
   width: 100%;
   background-color: #f9f9f9;
@@ -29,6 +26,7 @@
   padding: 20px;
   text-align: center;
   max-width: 80%;
+  margin: 20px auto
 }
 
 .features {
@@ -38,6 +36,7 @@
   align-items: space-between;
   width: 90%;
   height: 80%;
+  margin: 0 auto;
 }
 
 .feature {
