--- a/src/components/Project/Project.less
+++ b/src/components/Project/Project.less
@@ -26,10 +26,6 @@
   color: #697da5;
 }
 
-.project-info h2:hover {
-  color: #667188;
-}
-
 .project-info span {
   font-size: 1.25em;
   margin: 10px 0;
